Feat: 테마에서 컴포넌트 하나 가져오기 예시

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Exercise Mate</title>
 
-    <link href="/assets/css/theme.css" rel="stylesheet" type="text/css" />
+    <link rel="stylesheet" type="text/css" href="/assets/css/theme.min.css">
 
   </head>
   <body>
@@ -15,5 +15,7 @@
   </body>
 </html>
 
-<script src="/assets/js/theme.js"></script>
-<!-- <script src="/assets/js/components.js"></script> -->
+<!-- smooth-scroll을 먼저 추가해줘야 콘솔에서 에러가 안 남 -->
+<script src="/assets/vendor/smooth-scroll/dist/smooth-scroll.polyfills.min.js"></script>
+
+<script src="/assets/js/theme.min.js"></script>
