--- a/index.html
+++ b/index.html
@@ -33,3 +33,8 @@
 <script src="/assets/vendor/smooth-scroll/dist/smooth-scroll.polyfills.min.js"></script>
 
 <script src="/assets/js/theme.min.js"></script>
+
+<!-- SockJS는 global을 의존하는 라이브러리지만, vite는 global 객체를 지원하지 않기에 추가 -->
+<script>
+  const global = globalThis;
+</script>
